--- a/nfc/libnfc-nxp_RF.conf
+++ b/nfc/libnfc-nxp_RF.conf
@@ -1,7 +1,6 @@
 ##############################################################
-## F10 libnfc-nxp_RF.conf FW15 modify by Kevin 5th, Dec 2018#####
-## F10 libnfc-nxp_RF.conf FW15 Hybrid mode 12th, Dec 2018#######
-## F10 libnfc-nxp_RF.conf FW18 BCTC  15th, Apil 2019#########
+## F4 libnfc-nxp_RF.conf FW18 EMVco   21th, Aug 2019#########
+## F4 P2 libnfc-nxp_RF.conf FW18 EMVco   5th, Sep 2019#########
 ###############################################################################
 # NXP RF configuration ALM/PLM settings
 # This section needs to be updated with the correct values based on the platform
@@ -10,14 +9,14 @@
 NXP_RF_CONF_BLK_1={20, 02, 53, 03,
 	      A0, 0E, 2C, F0, 00, 3E, 11, E4, E4, E4, 00, 00, 00, 00, 00, A7, 8E, FF, FF, 23, 23, 23, 23, 0A, 00, 00, 00, 00, 02, 00, 00, 01, 00, 10, 00, 04, 00, 00, 00, 17, 40, FF, 07, 13, 07, 05, 13,
 	      A0, A5, 0D, 3B, 3B, 3B, 3B, 3B, 3B, FF, 03, 1F, 00, 00, 00, 00,
-	      A0, 6A, 10, 64, 00, 64, 00, 64, 00, 64, 00, B4, 00, B4, 00, B4, 00, B4, 00
+	      A0, 6A, 10, 28, 05, 28, 05, 28, 05, 28, 05, B4, 00, B4, 00, B4, 00, B4, 00
 }
 
 NXP_RF_CONF_BLK_2={20, 02, ED, 04,
 A0, AF, 09, 11, 2F, 00, 23, 11, 2F, 00, 23, 00,
 A0, 98, 05, 2F, 97, 1C, 80, 23,
-A0, 34, C8, 23, 04, 3D, 01, 02, 18, 4B, 09, 00, 00, DE, 0C, 00, 00, DE, 0C, 00, 00, DE, 11, 00, 00, DE, 11, 00, 00, DE, 11, 00, 00, DE, 11, 00, 00, DE, 11, 00, 00, 3B, 17, 00, 00, 3B, 17, 00, 00, 04, 19, 00, 00, 97, 1C, 00, 00, 97, 1C, 00, 00, 2A, 20, 00, 00, 2A, 20, 00, 00, F3, 21, 00, 00, 98, 3A, 00, 00, 98, 3A, 00, 00, 98, 3A, 00, 00, 98, 3A, 00, 00, 98, 3A, 00, 00, 98, 3A, 00, 00, 98, 3A, 00, 00, 98, 3A, 00, 00, 02, 18, 40, 06, 00, 00, 6C, 07, 00, 00, 6C, 07, 00, 00, 66, 08, 00, 00, 66, 08, 00, 00, 92, 09, 00, 00, 92, 09, 00, 00, B8, 0B, 00, 00, C0, 0D, 00, 00, C0, 0D, 00, 00, 4A, 10, 00, 00, 4A, 10, 00, 00, 4A, 10, 00, 00, 4A, 10, 00, 00, 4A, 10, 00, 00, 4A, 10, 00, 00, 4A, 10, 00, 00, 64, 14, 00, 00, 64, 14, 00, 00, 64, 14, 00, 00, 64, 14, 00, 00, 64, 14, 00, 00, 64, 14, 00, 00, 64, 14, 00, 00,
-A0, 9E, 0A, 03, 97, 1C, 64, 00, 96, 00, 2B, 52, 03}
+A0, 34, C8, 23, 04, 3D, 01, 02, 18, DE, 0C, 00, 00, DE, 0C, 00, 00, 4C, 0E, 00, 00, DE, 11, 00, 00, DE, 11, 00, 00, DE, 11, 00, 00, DE, 11, 00, 00, 71, 15, 00, 00, 71, 15, 00, 00, 71, 15, 00, 00, 71, 15, 00, 00, 71, 15, 00, 00, 04, 19, 00, 00, CE, 1A, 00, 00, CE, 1A, 00, 00, 97, 1C, 00, 00, 2A, 20, 00, 00, 2A, 20, 00, 00, F3, 21, 00, 00, F3, 21, 00, 00, BD, 23, 00, 00, 98, 3A, 00, 00, 98, 3A, 00, 00, 98, 3A, 00, 00, 02, 18, 40, 06, 00, 00, 6C, 07, 00, 00, 6C, 07, 00, 00, 66, 08, 00, 00, 66, 08, 00, 00, 92, 09, 00, 00, 92, 09, 00, 00, B8, 0B, 00, 00, C0, 0D, 00, 00, C0, 0D, 00, 00, 4A, 10, 00, 00, 4A, 10, 00, 00, 4A, 10, 00, 00, 4A, 10, 00, 00, 4A, 10, 00, 00, 4A, 10, 00, 00, 4A, 10, 00, 00, 64, 14, 00, 00, 64, 14, 00, 00, 64, 14, 00, 00, 64, 14, 00, 00, 64, 14, 00, 00, 64, 14, 00, 00, 64, 14, 00, 00,
+A0, 9E, 0A, 03, 97, 1C, 96, 00, 96, 00, 2B, 52, 03}
 
 NXP_RF_CONF_BLK_3={20, 02, F1, 01, A0, A9, ED, 00, 2A, FF, 01, 24, FF, 02, 1F, FF, 03, 1A, FF, 04, 16, FF, 05, 12, FF, 06, 0F, FF, 07, 0C, FF, 08, 09, FF, 09, 07, FF, 0A, 05, FF, 0B, 03, FF, 0C, 01, FF, 0D, 00, F5, 0E, 00, DC, 0F, 00, C6, 10, 00, B3, 11, 00, A2, 12, 00, 92, 13, 00, 84, 14, 00, 77, 15, 00, 6B, 16, 00, 60, 17, 00, 57, 18, 00, 4E, 19, 00, 46, 1A, 00, 3F, 1B, 00, 39, 1C, 00, 33, 1D, 00, 2E, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A, 1E, 00, 2A}
 
@@ -50,7 +49,7 @@ NXP_RF_CONF_BLK_6={
 	      A0, 0D, 06, 42, 44, 00, B0, 26, 01,
 	      A0, 0D, 06, 42, 43, A5, 24, 4D, ED,
 	      A0, 0D, 06, 42, 41, FF, FF, 5F, F0,
-	      A0, 0D, 06, 42, 40, 20, 77, 33, 3A,
+	      A0, 0D, 06, 42, 40, 18, 77, 33, 3A,
 	      A0, 0D, 06, 42, 4A, 0E, 83, 81, 0D,
 	      A0, 0D, 06, 42, 49, 79, 46, 26, 00,
 	      A0, 0D, 06, 51, 40, 12, 77, 33, 3A,
